syntax = "proto3";

package worker_lifecycle;

service WorkerLifecycle {
  rpc NotifyShutdown (WorkerLifecycleRequest) returns (WorkerLifecycleResponse);
  rpc NotifyReady (WorkerReadyRequest) returns (WorkerReadyResponse);
}

message WorkerLifecycleRequest {
  string guildId = 1;
  string reason = 2;
}

message WorkerLifecycleResponse {
  bool acknowledged = 1;
}

message WorkerReadyRequest {
  string guildId = 1;
}

message WorkerReadyResponse {
  bool acknowledged = 1;
}
